GrahpQL query data

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "explore": "gridsome explore"
     },
     "dependencies": {
+        "axios": "^0.20.0",
         "gridsome": "^0.7.0"
     }
 }
